fix: Reconfigure build settings for production stability

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nikshiptha Sonajoke | Portfolio</title>
+    
+    <!-- NEW META DESCRIPTION TAG -->
+    <meta name="description" content="The personal portfolio of Nikshiptha Sonajoke, an aspiring software developer specializing in Machine Learning and Web Development." />
+
   </head>
   <body>
     <div id="root"></div>
